src/objects/Bank_Transaction__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>12</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Confirmed_By__c</fullName>
        <label>Confirmed By</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Confirmed</fullName>
                </value>
                <value>
                    <fullName>Lui</fullName>
                </value>
                <value>
                    <fullName>Anna</fullName>
                </value>
                <value>
                    <fullName>Thess</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Deposit</fullName>
                </value>
                <value>
                    <fullName>Withdrawal</fullName>
                </value>
                <value>
                    <fullName>Interest Earned/Withheld</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Bank Transaction</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Amount__c</columns>
        <columns>Date__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BDO-{000000}</displayFormat>
        <label>Bank Transaction ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bank Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>